# ai-mock-interviews

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  entrypoint.sh  fly-ws.toml  fly.toml  insomnia_collection.yaml  main.py  netlify.toml  pyproject.toml
.github/workflows/: fly-deploy.yml
app/: main.py  main_ws.py
app/ai/: embeddings.py  evaluator.py  generator.py  prompts.py  transcriber.py  tts.py
app/ai/templates/: clarification_user.md  evaluator_system.md  (+14 more)
app/auth/: deps.py  router.py  service.py
app/config/: settings.py
app/db/: models.py  session.py
app/interviews/: routes.py  service.py
app/questions/: routes.py  service.py
app/schemas/: interviews.py  questions.py  sessions.py  users.py  utils.py
app/sessions/: routes.py  service.py  ws.py  ws_routes.py
app/users/: routes.py  service.py
frontend/: .dockerignore  .gitignore  Dockerfile  README.md  index.html  package.json  vite.config.js
frontend/scripts/: copy-vad-assets.mjs
frontend/src/: App.jsx  config.js  index.css  main.jsx
migrations/: env.py
migrations/versions/: 8a9641cee57e_initial_migration.py  966df17a95a1_add_status_column.py  a9b8c7d6e5f4_backfill_user_id_in_chunk_metadata.py  b1d4e7f2a9c3_add_hidden_spec_timing_probe_clarifications.py  b3f2a1c4d5e6_drop_embedding_columns.py  c7f12a3e98b0_add_examples_column.py  dedc4ecff85c_add_coding_interview_support.py  e4d8b7a2c1f0_add_answer_unique_and_followup_parent.py  f7c2d9e8b3a1_reset_vector_store_for_gemini.py
tests/: test_evaluator.py  test_generator.py  test_prompts.py
(+20 files in other folders)
