[project]
name = "ai-mock-interviews"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.3",
    "sqlalchemy>=2.0",
    "asyncpg>=0.30.0",
    "alembic>=1.15.0",
    "pgvector>=0.3.2",
    "langchain-postgres>=0.0.17",
    "python-dotenv>=1.0.0",
    "uvicorn[standard]>=0.30.0",
    "openai>=1.0.0",
    "langchain>=1.2.15",
    "langchain-huggingface>=1.2.1",
    "sentence-transformers>=5.4.0",
    "langchain-text-splitters>=1.1.1",
    "pypdf>=6.10.0",
    "langchain-community>=0.4.1",
    "pydantic[email]>=2.12.5",
    "python-multipart>=0.0.26",
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=4.0.0",
    "edge-tts>=6.1.9",
]
